--- a/6.0/BlazorServerEFCoreSample/BlazorServerDbContextExample/Shared/ContactRow.razor
+++ b/6.0/BlazorServerEFCoreSample/BlazorServerDbContextExample/Shared/ContactRow.razor
@@ -31,6 +31,7 @@
             <div class="col-2">@CurrentContact.City</div>
             <div class="col-1">@CurrentContact.State</div>
             <div class="col-1">@CurrentContact.ZipCode</div>
+             <div class="col-1">@CurrentContact.Email</div>
         }
         else
         {
